--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container">
                 <h2 class="text-center my-4 pb-5 moi" id="apropos">A PROPOS DE MOI</h2>
                 <div class="section1">
-                    <div class="col-12 col-md-5 maphoto">
+                    <div class="maphoto">
                         <img src="images/croqmr_-20220211-0001.jpg" alt="" srcset="" class="w-100">
                     </div>
                     <div class="apropos">
@@ -75,10 +75,10 @@
                 </div>
             </div>
         </section>
-        <section class="mt-5 bg-light container-fluid">
-            <div class="container py-5">
+        <section class="section2">
+            <div class="">
                 <h2 class="apropos text-center my-4 pb-5" id="competences">COMPÉTENCES</h2>
-                <div class="row ">
+                <div class="competences">
                     <div class="col-12 col-md-5 maphoto">
                         <div class="code">
                             <img src="images/code.jpg" alt="" srcset="" class="w-100">
@@ -87,9 +87,9 @@
                             Elles sont en constantes améliorations car pour moi la joie de ce métier fait que l’on en
                             apprend tous les jours, d’autant plus en étant impliqué, curieux et passionné.
                         </p>
-
                     </div>
-                    <div class="col-12 offset-md-1 col-md-6 skills">
+
+                    <div class="skills">
                         <div class="skill">
                             <div class="skill-name">HTML</div>
                             <div class="skill-bar">
