--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <main>
         <section class="">
+            <h2 class="ap" id="apropos">A PROPOS DE MOI</h2>
             <div class="container">
-                <h2 class="text-center my-4 pb-5 moi" id="apropos">A PROPOS DE MOI</h2>
                 <div class="section1">
                     <div class="maphoto">
                         <img src="images/croqmr_-20220211-0001.jpg" alt="" srcset="" class="w-100">
@@ -76,67 +76,66 @@
             </div>
         </section>
         <section class="section2">
-            <div class="">
-                <h2 class="apropos text-center my-4 pb-5" id="competences">COMPÉTENCES</h2>
-                <div class="competences">
-                    <div class="col-12 col-md-5 maphoto">
-                        <div class="code">
-                            <img src="images/code.jpg" alt="" srcset="" class="w-100">
+            <h2 class="apropos" id=" competences">COMPÉTENCES</h2>
+            <div class="competences">
+                <div class="col-12 col-md-5 maphoto">
+                    <div class="code">
+                        <img src="images/code.jpg" alt="" srcset="" class="w-100">
+                    </div>
+                    <p>
+                        Elles sont en constantes améliorations car pour moi la joie de ce métier fait que l’on en
+                        apprend tous les jours, d’autant plus en étant impliqué, curieux et passionné.
+                    </p>
+                </div>
+
+                <div class="skills">
+                    <div class="skill">
+                        <div class="skill-name">HTML</div>
+                        <div class="skill-bar">
+                            <div class="skill-per" style="max-width:90%"></div>
                         </div>
-                        <p>
-                            Elles sont en constantes améliorations car pour moi la joie de ce métier fait que l’on en
-                            apprend tous les jours, d’autant plus en étant impliqué, curieux et passionné.
-                        </p>
                     </div>
 
-                    <div class="skills">
-                        <div class="skill">
-                            <div class="skill-name">HTML</div>
-                            <div class="skill-bar">
-                                <div class="skill-per" style="max-width:90%"></div>
-                            </div>
+                    <div class="skill">
+                        <div class="skill-name">CSS</div>
+                        <div class="skill-bar">
+                            <div class="skill-per" style="max-width:70%"></div>
                         </div>
+                    </div>
 
-                        <div class="skill">
-                            <div class="skill-name">CSS</div>
-                            <div class="skill-bar">
-                                <div class="skill-per" style="max-width:70%"></div>
-                            </div>
+                    <div class="skill">
+                        <div class="skill-name">Javascript</div>
+                        <div class="skill-bar">
+                            <div class="skill-per" style="max-width:30%"></div>
                         </div>
+                    </div>
 
-                        <div class="skill">
-                            <div class="skill-name">Javascript</div>
-                            <div class="skill-bar">
-                                <div class="skill-per" style="max-width:30%"></div>
-                            </div>
+                    <div class="skill">
+                        <div class="skill-name">php</div>
+                        <div class="skill-bar">
+                            <div class="skill-per" style="max-width:40%"></div>
                         </div>
+                    </div>
 
-                        <div class="skill">
-                            <div class="skill-name">php</div>
-                            <div class="skill-bar">
-                                <div class="skill-per" style="max-width:40%"></div>
-                            </div>
+                    <div class="skill">
+                        <div class="skill-name">sql</div>
+                        <div class="skill-bar">
+                            <div class="skill-per" style="max-width:40%"></div>
                         </div>
-
-                        <div class="skill">
-                            <div class="skill-name">sql</div>
-                            <div class="skill-bar">
-                                <div class="skill-per" style="max-width:40%"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill-name">bootstrap</div>
-                            <div class="skill-bar">
-                                <div class="skill-per" style="max-width:70%"></div>
-                            </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-name">bootstrap</div>
+                        <div class="skill-bar">
+                            <div class="skill-per" style="max-width:70%"></div>
                         </div>
                     </div>
                 </div>
         </section>
         <section>
+            <h2 class="text-center my-4 pb-5" id="portfolio">PORTFOLIO</h2>
             <div class="container py-5 portfolio">
-                <h2 class="text-center my-4 pb-5" id="portfolio">PORTFOLIO</h2>
-                <div class="row g-5">
+
+                <div class="projets">
                     <div class="col-12 col-md-4">
                         <div class="block-card">
                             <div class="image">
@@ -169,79 +168,64 @@
                     </div>
                 </div>
         </section>
-        <section id="contact" class="py-5 bg-light">
-            <div class="container">
-                <h2 class="text-center my-4 pb-5 contacte" id="contact">CONTACTEZ-MOI</h2>
+        <section class="contact">
+            <div class="content">
+                <h2 id="contact">CONTACTEZ-MOI</h2>
                 <p class="text-center">N'hésitez pas à me contacter pour discuter de collaborations, de projets
                     intéressants ou simplement pour échanger sur le développement web.</p>
-                <div class="row gy-4 mt-4">
-                    <div class="col-12 col-md-5">
-                        <div class="contactInfo">
-                            <div class="box">
-                                <div class="ico"><i class="fa-sharp fa-solid fa-location-dot"></i></div>
-                                <div class="text">
-                                    <h3>adress</h3>
-                                    <p>bujumbura</p>
-                                </div>
 
-                            </div>
-                            <div class="box">
-                                <div class="ico"><i class="fa-solid fa-phone"></i></div>
-                                <div class="text">
-                                    <h3>phone</h3>
-                                    <p>+257-67-58-93-58</p>
-                                </div>
-
-                            </div>
-                            <div class="box">
-                                <div class="ico"><i class="fa-solid fa-envelope"></i></div>
-                                <div class="text">
-                                    <h3>email</h3>
-                                    <p>danielciroy87@gmail.com</p>
-                                </div>
-                            </div>
-                            <div class="reseaux">
-                                <div class="iconereseau">
-                                    <a href="https://www.instagram.com/daniel__ciroy/"><i
-                                            class="fa-brands fa-square-instagram"></i></a>
-                                    <a href="https://twitter.com/CiroyDaniel"><i
-                                            class="fa-brands fa-square-x-twitter"></i></a>
-                                    <a href="https://github.com/DanielCiroy"><i
-                                            class="fa-brands fa-square-github"></i></a>
-                                    <a href="https://www.linkedin.com/in/daniel-ciroy-775776261"><i
-                                            class="fa-brands fa-linkedin"></i></a>
-                                </div>
+            </div>
+            <div class="container">
+                <div class="bloc-contact">
+                    <div class="contactInfo">
+                        <div class="box">
+                            <div class="ico"><i class="fa-sharp fa-solid fa-location-dot"></i></div>
+                            <div class="text">
+                                <h3>adress</h3>
+                                <p>Bujumbura</p>
                             </div>
 
                         </div>
+                        <div class="box">
+                            <div class="ico"><i class="fa-solid fa-phone"></i></div>
+                            <div class="text">
+                                <h3>phone</h3>
+                                <p>68-84-53-04</p>
+                            </div>
 
+                        </div>
+                        <div class="box">
+                            <div class="ico"><i class="fa-solid fa-envelope"></i></div>
+                            <div class="text">
+                                <h3>email</h3>
+                                <p>danielciroy87@gmail.com</p>
+                            </div>
+
+                        </div>
                     </div>
-                    <div class="col-12 offset-md-1 col-md-6">
-                        <!-- Formulaire -->
-                        <form class="row mt-5 pt-md-4">
-                            <div class="col-6 my-2">
-                                <label for="firstname" class="form-label">Prénom</label>
-                                <input name="firstname" type="text" class="form-control" id="firstname">
+                    <div class="contactform">
+                        <form action="">
+                            <div class="inputbox">
+                                <span>fullname</span>
+                                <input type="text" name="" required="required">
                             </div>
-                            <div class="col-6 my-2">
-                                <label for="name" class="form-label">Nom</label>
-                                <input name="name" type="text" class="form-control" id="name">
+                            <div class="inputbox">
+                                <span>Email</span>
+                                <input type="text" name="" required="required">
+
                             </div>
-                            <div class="col-12 my-2">
-                                <label for="email" class="form-label">Email address</label>
-                                <input name="email" type="email" class="form-control" id="email">
+                            <div class="inputbox">
+                                <span>message</span>
+                                <textarea required="required"></textarea>
+
                             </div>
-                            <div class="col-12 my-2">
-                                <label for="message" class="form-label">Message</label>
-                                <textarea name="message" class="form-control" id="message" rows="3"></textarea>
-                            </div>
-                            <div class="col-12 my-2">
-                                <button type="submit" class="btnform w-100">Envoyer</button>
+                            <div class="inputbox">
+                                <input type="submit" value="envoyer">
                             </div>
                         </form>
-
                     </div>
                 </div>
+
             </div>
         </section>
     </main>
