--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 </div>
         </section>
         <section>
-            <h2 class="text-center my-4 pb-5" id="portfolio">PORTFOLIO</h2>
-            <div class="container py-5 portfolio">
+            <h2 class="" id="portfolio">PORTFOLIO</h2>
+            <div class="portfolio">
 
                 <div class="projets">
                     <div class="col-12 col-md-4">
@@ -179,7 +179,7 @@
                 <div class="bloc-contact">
                     <div class="contactInfo">
                         <div class="box">
-                            <div class="ico"><i class="fa-sharp fa-solid fa-location-dot"></i></div>
+                            <div class="ico"><i class="fa-sharp fa-solid fa-house"></i></div>
                             <div class="text">
                                 <h3>adress</h3>
                                 <p>Bujumbura</p>
@@ -239,19 +239,6 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <script src="js/app.js">
 
