--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#acuueil">accueil</a></li>
                 <li><a href="#apropos">à propos</a></li>
                 <li><a href="#competences">compétences</a></li>
-                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#portfolio">projets</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
             <div class="reseaux-sociaux">
@@ -42,6 +42,7 @@
             <li><a href="#accueil">accueil</a></li>
             <li><a href="#apropos">à propos</a></li>
             <li><a href="#competences">compétences</a></li>
+            <li><a href="#competences">projets</a></li>
             <li><a href="#contact">contact</a></li>
         </div>
 
@@ -57,7 +58,7 @@
             <div class="container">
                 <div class="section1">
                     <div class="maphoto">
-                        <img src="images/croqmr_-20220211-0001.jpg" alt="" srcset="" class="w-100">
+                        <img src="images/croqmr_-20220211-0001.jpg" alt="" srcset="" width="100%">
                     </div>
                     <div class="apropos">
                         <p>
@@ -78,9 +79,9 @@
         <section class="section2">
             <h2 class="apropos" id=" competences">COMPÉTENCES</h2>
             <div class="competences">
-                <div class="col-12 col-md-5 maphoto">
+                <div class=" maphoto">
                     <div class="code">
-                        <img src="images/code.jpg" alt="" srcset="" class="w-100">
+                        <img src="images/code.jpg" alt="" srcset="" width="100%">
                     </div>
                     <p>
                         Elles sont en constantes améliorations car pour moi la joie de ce métier fait que l’on en
@@ -132,7 +133,7 @@
                 </div>
         </section>
         <section>
-            <h2 class="" id="portfolio">PORTFOLIO</h2>
+            <h2 class="" id="portfolio">PROJETS</h2>
             <div class="portfolio">
 
                 <div class="projets">
@@ -231,8 +232,7 @@
     </main>
     <footer class="border-top">
         <div class="container py-5">
-            <p class="copy text-center">© Copyright 2023 - Daniel Ciroy. Tous droits réservés. <br><span
-                    class="mentions text-sm-start"> &nbsp; Mentions légales</span></p>
+            <p class="copy text-center">© Copyright 2024 - Daniel Ciroy. Tous droits réservés.
         </div>
     </footer>
 
